# WindyCloud

./: .dockerignore  .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOY.md  DNA_STRAND_MASTER_PLAN.md  Dockerfile  GAP_ANALYSIS.md  INTEGRATION_GUIDE.md  README.md  SUBSTRATE.md  VISUAL_AUDIT.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/lint/: lint-canonical-domains.sh
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_wave2_tier_and_bridge.py  003_trust_multiplier.py  004_wave8_backup_offer.py  005_wave12_stripe_billing.py
api/app/: config.py  main.py  telemetry.py
api/app/auth/: dependencies.py  jwks.py  webhook.py
api/app/db/: engine.py  models.py
api/app/middleware/: rate_limit.py  request_logging.py  security_headers.py  storage_warning.py
api/app/models/: billing.py  compute.py  server.py  storage.py
api/app/providers/: aws_ec2.py  local_disk.py  mock_vps.py  r2.py  runpod.py  sagemaker.py  stt_base.py
api/app/routes/: agent_compat.py  analytics.py  archive.py  auth.py  billing.py  compute.py  deeplink.py  eternitas_dispatcher.py  export.py  health.py  identity.py  servers.py  storage.py  stripe_webhook.py  sync.py  (+2 more)
api/tests/: conftest.py  hardening_wave11.py  test_archive.py  test_auth.py  test_billing.py  test_billing_quota_display.py  test_billing_snapshot.py  test_cold_storage.py  test_compute.py  test_compute_stt_trust_fail_closed.py  test_compute_stt_upload_size_gate.py  test_deploy_fly.py  test_ept_auth.py  test_export_download.py  test_fly_bootstrap.py  test_fly_integration.py  test_health.py  test_login_403_passthrough.py  test_plans_analytics.py  test_quotas.py  test_r2_metadata_stringify.py  test_rate_limit.py  test_retention_cleanup.py  test_revocation_route_gates.py  test_servers.py  test_storage.py  test_sync_export.py  test_telemetry.py  test_version.py  test_wave12_c1_archive_quota.py  test_wave12_c2_stripe_webhook.py  test_wave12_h3_reinstate.py  test_wave12_m5_settings_extras.py  test_wave14_analytics_admin_gate.py  test_wave14_archive_filename.py  test_wave14_eternitas_dispatcher.py  test_wave14_pro_jwt_compat.py  test_wave14_security_headers.py  test_wave14_trust_lkg.py  test_wave2_allocate.py  (+36 more)
deploy/: aws-setup.sh  nginx.conf  setup.sh
deploy/aws/: CLOUD_DEPLOYMENT.md
deploy/aws-terraform/: main.tf  outputs.tf  variables.tf
deploy/docs/: env-vars.md
deploy/scripts/: healthcheck.sh  migrate.sh  setup-ssl.sh
deploy/terraform/: README.md  compute.tf  iam.tf  network.tf  outputs.tf  prod.tfvars.example  rds.tf  variables.tf  versions.tf
docs/: BUCKET_B_PARKED.md  BUCKET_C_REVIEW_REQUEST.md  BUCKET_D_DECISIONS.md  GAP_ANALYSIS.md  HARDENING_REPORT.md  MERGE_TRIAGE.md  POST_LAUNCH_TODOS.md  SMOKE_REPORT_2026-04-19.md  WAVE13_PHASE3_RUNBOOK.md  WAVE14_FIX_REPORT.md  WHITE_GLOVE_SMOKE_PROMPT.md
docs/audit/: adversarial-probes.md  coverage-gaps.md  endpoint-inventory.txt
scripts/: dev.sh  seed.sh  smoke-test.sh
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Layout.tsx  Toast.tsx  api.ts  index.css  main.tsx  tourState.ts  util.ts
(+26 files in other folders)
