[project]
name = "windy-cloud"
version = "0.1.0"
description = "Unified cloud platform for the Windy ecosystem — storage, compute, and servers."
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Grant Whitmer"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "PyJWT[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests"]
# Default run excludes wave11 hardening probes — they re-ran under
# `pytest -m wave11` only. Keeps CI from paying for adversarial probes
# that mutate global settings.default_storage_quota.
addopts = "-m 'not wave11'"
markers = [
    "wave11: adversarial hardening probes; run explicitly with -m wave11",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
]

[tool.coverage.run]
source = ["api/app"]
branch = true
omit = [
    "api/app/__version__.py",
    "api/app/main.py",
    "*/migrations/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# Overall target. Today's baseline is 53% with branch coverage on (58%
# without). Set at 50 so this PR lands without false-failing; bump to
# 70+ when the auth/billing coverage push (GAP G11) closes.
fail_under = 50
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
